feat: add catalog search pagination and Redis caching
Implemented:
- Product pagination and sorting
- Product filtering and search
- Redis caching for read-heavy catalog operations